[gd_scene load_steps=43 format=2]

[ext_resource path="res://Flynny.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shooty.tscn" type="PackedScene" id=2]
[ext_resource path="res://Flower.tscn" type="PackedScene" id=3]
[ext_resource path="res://Control.gd" type="Script" id=4]
[ext_resource path="res://Enemy.gd" type="Script" id=5]
[ext_resource path="res://Flynn.gd" type="Script" id=6]
[ext_resource path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Health Bar.gd" type="Script" id=8]
[ext_resource path="res://Space.gd" type="Script" id=9]
[ext_resource path="res://Game Over.gd" type="Script" id=10]
[ext_resource path="res://Points.gd" type="Script" id=11]
[ext_resource path="res://Shoot.png" type="Texture" id=12]
[ext_resource path="res://Guard.png" type="Texture" id=13]
[ext_resource path="res://Space.png" type="Texture" id=14]
[ext_resource path="res://FrogDeath.png" type="Texture" id=15]
[ext_resource path="res://Mother Gothel.png" type="Texture" id=16]
[ext_resource path="res://Die.png" type="Texture" id=17]
[ext_resource path="res://Rapunzel Death.png" type="Texture" id=18]
[ext_resource path="res://FrogAttack.png" type="Texture" id=19]
[ext_resource path="res://Attila.png" type="Texture" id=20]
[ext_resource path="res://Rapunzel Special.png" type="Texture" id=21]
[ext_resource path="res://Smolder.png" type="Texture" id=22]
[ext_resource path="res://Frog.png" type="Texture" id=23]
[ext_resource path="res://Hook.png" type="Texture" id=24]
[ext_resource path="res://HealthBar.png" type="Texture" id=25]
[ext_resource path="res://Rapunzel Shoot.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=45]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=42]

[sub_resource type="DynamicFont" id=46]
size = 15
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=31]
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("FadeAnimationPlayer/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.160784, 0.160784, 0.160784, 0 ), Color( 0.160784, 0.160784, 0.160784, 1 ) ]
}

[sub_resource type="Theme" id=32]

[sub_resource type="DynamicFont" id=43]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.282353, 0.278431, 0.290196, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20
shadow_color = Color( 1, 0.054902, 0.054902, 1 )

[sub_resource type="DynamicFont" id=44]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.909804, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.498039, 0.027451, 0.027451, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.145098, 0.137255, 0.156863, 1 )
border_width_left = 10
border_width_top = 7
border_width_right = 7
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_detail = 10

[node name="Level" type="Node2D"]

[node name="Health Bar" type="Sprite" parent="."]
position = Vector2( 181, 80 )
scale = Vector2( 0.25, 0.25 )
z_index = -1
texture = ExtResource( 25 )
hframes = 4
script = ExtResource( 8 )

[node name="Flynn" type="KinematicBody2D" parent="."]
position = Vector2( 100, 450 )
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="ShootTimer" type="Timer" parent="Flynn"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Flynn"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 5

[node name="Flynny" parent="Flynn" instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="Flynn"]
wait_time = 3.0
one_shot = true

[node name="SpecialTimer" type="Timer" parent="Flynn"]
wait_time = 15.0

[node name="Shooty" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, -96 )
z_index = -2

[node name="Flower" parent="." instance=ExtResource( 3 )]

[node name="Mother Gothel" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Mother Gothel"]
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="Area2D" type="Area2D" parent="Mother Gothel"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mother Gothel/Area2D"]
polygon = PoolVector2Array( 2, -64, 14, -58, 38, -38, 57, -24, 75, 13, 84, 19, 93, 42, 89, 52, 41, 55, 6, 45, -24, 60, -39, 55, -84, 61, -94, 52, -94, 36, -76, 12, -72, -4, -53, -34, -44, -39, -37, -51, -16, -61 )

[node name="Timer" type="Timer" parent="Mother Gothel"]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="Mother Gothel"]
wait_time = 3.0
one_shot = true

[node name="Guard" type="KinematicBody2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Guard"]
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="Guard"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Guard/Area2D"]
polygon = PoolVector2Array( -3, -164, 37, -151, 78, -108, 95, -44, 96, -6, 110, 77, 91, 108, 78, 97, 67, 100, 58, 128, -18, 167, -56, 163, -84, 136, -100, 81, -103, -38, -91, -100, -48, -150 )

[node name="Timer" type="Timer" parent="Guard"]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="Guard"]
wait_time = 3.0
one_shot = true

[node name="Patchy" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Patchy"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 24 )

[node name="Area2D" type="Area2D" parent="Patchy"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Patchy/Area2D"]
polygon = PoolVector2Array( -13, -92, -4, -91, 3, -85, 26, -75, 43, -49, 56, -51, 65, -36, 66, -12, 55, -2, 63, 31, 35, 76, 14, 89, -10, 90, -24, 81, -37, 59, -46, 24, -54, 19, -61, -1, -60, -18, -59, -38, -56, -59, -58, -64, -41, -87 )

[node name="Timer" type="Timer" parent="Patchy"]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="Patchy"]
wait_time = 3.0
one_shot = true

[node name="Sideburns" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Sideburns"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="Sideburns"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sideburns/Area2D"]
polygon = PoolVector2Array( 15, -58, 37, -47, 61, 66, -44, 81, -71, 78, -53, -54, -17, -61 )

[node name="Timer" type="Timer" parent="Sideburns"]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="Sideburns"]
wait_time = 3.0
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 540 )
z_index = 4096
texture = ExtResource( 14 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="Points" type="Label" parent="UI"]
margin_left = 675.0
margin_top = 28.0
margin_right = 900.0
margin_bottom = 68.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 45 )
text = "Points: "
script = ExtResource( 11 )
level = "Level5"

[node name="Game Over" type="Label" parent="UI"]
visible = false
margin_left = 500.0
margin_top = 350.0
margin_right = 576.0
margin_bottom = 364.0
rect_scale = Vector2( 6, 6 )
theme = SubResource( 42 )
custom_fonts/font = SubResource( 46 )
text = "GAME OVER"
script = ExtResource( 10 )

[node name="Restart Timer" type="Timer" parent="UI/Game Over"]
wait_time = 5.0
one_shot = true

[node name="Control" type="Control" parent="UI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
next_level = "res://PasswordLevel.tscn"

[node name="FadeAnimationPlayer" type="AnimationPlayer" parent="UI/Control"]
anims/Fade = SubResource( 31 )

[node name="Fade" type="ColorRect" parent="UI/Control/FadeAnimationPlayer"]
visible = false
modulate = Color( 0.160784, 0.160784, 0.160784, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="Banner" type="ColorRect" parent="UI/Control"]
margin_top = 300.0
margin_right = 1920.0
margin_bottom = 550.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 0.866667 )

[node name="Dim" type="ColorRect" parent="UI/Control"]
margin_right = 1930.0
margin_bottom = 1080.0
color = Color( 0.192157, 0.168627, 0.168627, 0.180392 )

[node name="Buttons" type="VBoxContainer" parent="UI/Control"]
light_mask = 2
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 500.0
margin_top = 330.0
margin_right = 974.0
margin_bottom = 468.0
rect_min_size = Vector2( 300, 0 )

[node name="ResumeButton" type="Button" parent="UI/Control/Buttons"]
light_mask = 2
margin_right = 474.0
margin_bottom = 67.0
theme = SubResource( 32 )
custom_colors/font_color_disabled = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_fonts/font = SubResource( 43 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
button_mask = 0
text = "Resume"

[node name="QuitButton" type="Button" parent="UI/Control/Buttons"]
light_mask = 2
margin_top = 71.0
margin_right = 474.0
margin_bottom = 138.0
theme = SubResource( 32 )
custom_colors/font_color_disabled = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.494118, 0.454902, 1 )
custom_fonts/font = SubResource( 44 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 40 )
custom_styles/normal = SubResource( 41 )
button_mask = 0
text = "Quit"

[connection signal="score_changer" from="Flynn" to="Flower" method="_on_Flynn_score_changer"]
[connection signal="score_changer" from="Flynn" to="Mother Gothel" method="_on_Flynn_score_changer"]
[connection signal="score_changer" from="Flynn" to="Guard" method="_on_Flynn_score_changer"]
[connection signal="score_changer" from="Flynn" to="Patchy" method="_on_Flynn_score_changer"]
[connection signal="score_changer" from="Flynn" to="Sideburns" method="_on_Flynn_score_changer"]
[connection signal="score_changer" from="Flynn" to="UI/Points" method="_on_Flynn_score_changer"]
[connection signal="score_changer" from="Flynn" to="UI/Game Over" method="_on_Flynn_score_changer"]
[connection signal="smolder" from="Flynn" to="Mother Gothel" method="_on_Flynn_smolder"]
[connection signal="smolder" from="Flynn" to="Guard" method="_on_Flynn_smolder"]
[connection signal="smolder" from="Flynn" to="Patchy" method="_on_Flynn_smolder"]
[connection signal="smolder" from="Flynn" to="Sideburns" method="_on_Flynn_smolder"]
[connection signal="timeout" from="Flynn/ShootTimer" to="Flynn" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="Flynn/Timer" to="Flynn" method="_on_Timer_timeout"]
[connection signal="timeout" from="Flynn/SpecialTimer" to="Flynn" method="_on_SpecialTimer_timeout"]
[connection signal="heal" from="Flower" to="Flynn" method="_on_Flower_heal"]
[connection signal="death" from="Mother Gothel" to="UI/Points" method="_on_Mother_Gothel_death"]
[connection signal="die" from="Mother Gothel" to="Flynn" method="_on_Enemy_die"]
[connection signal="area_entered" from="Mother Gothel/Area2D" to="Mother Gothel" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Mother Gothel/Timer" to="Mother Gothel" method="_on_Timer_timeout"]
[connection signal="timeout" from="Mother Gothel/Timer2" to="Mother Gothel" method="_on_Timer2_timeout"]
[connection signal="death" from="Guard" to="UI/Points" method="_on_Guard_death"]
[connection signal="die" from="Guard" to="Flynn" method="_on_Enemy_die"]
[connection signal="area_entered" from="Guard/Area2D" to="Guard" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Guard/Timer" to="Guard" method="_on_Timer_timeout"]
[connection signal="timeout" from="Guard/Timer2" to="Guard" method="_on_Timer2_timeout"]
[connection signal="death" from="Patchy" to="UI/Points" method="_on_Patchy_death"]
[connection signal="die" from="Patchy" to="Flynn" method="_on_Enemy_die"]
[connection signal="area_entered" from="Patchy/Area2D" to="Patchy" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Patchy/Timer" to="Patchy" method="_on_Timer_timeout"]
[connection signal="timeout" from="Patchy/Timer2" to="Patchy" method="_on_Timer2_timeout"]
[connection signal="death" from="Sideburns" to="UI/Points" method="_on_Sideburns_death"]
[connection signal="die" from="Sideburns" to="Flynn" method="_on_Enemy_die"]
[connection signal="area_entered" from="Sideburns/Area2D" to="Sideburns" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Sideburns/Timer" to="Sideburns" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sideburns/Timer2" to="Sideburns" method="_on_Timer2_timeout"]
[connection signal="change_scene" from="UI/Points" to="UI/Control" method="_on_Points_change_scene"]
[connection signal="timeout" from="UI/Game Over/Restart Timer" to="UI/Control" method="_on_Restart_Timer_timeout"]
[connection signal="free" from="UI/Control" to="Flower" method="_on_Control_free"]
[connection signal="pressed" from="UI/Control/Buttons/ResumeButton" to="UI/Control" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="UI/Control/Buttons/QuitButton" to="UI/Control" method="_on_QuitButton_pressed"]
